# swupdate

./: .checkpatch.conf  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  Config.in  Kconfig  Makefile  Makefile.deps  Makefile.flags  Makefile.help  README  README.md  REUSE.toml  SWUpdate.svg.license  asym_encrypted_images.html  bindings.html  bootloader_interface.html  building-with-yocto.html  client.html  contributing.html  delta-update.html  encrypted_images.html  genindex.html  handlers.html  hawkbit-setup.html  hawkbitcfg.html  help_and_support.html  history.html  improvement_proposals.html  index.html  licensing.html  mongoose.html  objects.inv  overview.html  previous-releases.html  progress.html  roadmap.html  scenarios.html  search.html  (+16 more)
.github/: FUNDING.yml
.reuse/: dep5
2018.03/: bindings.html  building-with-yocto.html  contributing.html  encrypted_images.html  genindex.html  handlers.html  hawkbit-setup.html  help_and_support.html  index.html  licensing.html  mongoose.html  objects.inv  overview.html  progress.html  roadmap.html  scenarios.html  search.html  searchindex.js  signed_images.html  suricatta.html  sw-description.html  swupdate-client.html  swupdate-hawkbitcfg.html  swupdate-ipc.html  swupdate-progress.html  swupdate-sendtohawkbit.html  swupdate-sysrestart.html  swupdate.html
2018.11/: building-with-yocto.html  contributing.html  encrypted_images.html  genindex.html  (+16 more)
tools/python/swupdateclient/: README.md  pyproject.toml  setup.py  swupdate_client.py
tools/python/swupdateclient/swupdateclient/: __about__.py  __init__.py  main.py
(+916 files in other folders)
